tools/compile_fail_utils/tests/example_tests/basic_test.stderr
error[E0382]: borrow of moved value: `x`
  --> tests/example_tests/basic_test.rs:LL:CC
   |
LL |     let x = String::new();
   |         - move occurs because `x` has type `String`, which does not implement the `Copy` trait
LL |     // Help diagnostics need to be annotated
LL |     let y = x;
   |             - value moved here
...
LL |     println!("{x}");
   |               ^^^ value borrowed here after move
   |
   = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider cloning the value if the performance cost is acceptable
   |
LL |     let y = x.clone();
   |              ++++++++

error[E0382]: borrow of moved value: `x`
  --> tests/example_tests/basic_test.rs:LL:CC
   |
LL |     let x = String::new();
   |         - move occurs because `x` has type `String`, which does not implement the `Copy` trait
...
LL |     let y = x;
   |             - value moved here
...
LL |     println!("{x}");
   |               ^^^ value borrowed here after move
   |
   = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider cloning the value if the performance cost is acceptable
   |
LL |     let y = x.clone();
   |              ++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0382`.
